# UJ

./: README.md
Abstract programming/: CRTP.cpp  CompileTime_BubbleSort.cpp  Figures.cpp  Simple_Concepts.cpp  Zad1_Figury_Lezanski.cpp
C#/Ex1_game/: Program.cs
C#/Ex2_parlament/: Ex2_parlament.sln  Program.cs
C#/Ex3_Person/: Ex3_Person.sln  Program.cs
C#/Ex4_Queue/: Queue.cs  (+1 more)
C++/: igrzyska.cpp  koraliki.cpp  kostkowy_poker.cpp  lista_rozwijalna.cpp  napisy.cpp  ogrody.cpp  op_zbiorowe.cpp  podprogramy.cpp  podprogramy_zbiorowe_m.cpp  sklad_towaru.cpp
algo/: AllPairShortestPath.java  BFS_DFS.java  BST.java  BellmanAdj.java  BellmanClasses.java  BinarySearch.java  Boyer_Moore_Voting_alg.java  BubbleSort.java  ClosestProduct.java  CountSort.java  EulerPath(Fleury's).java  FIFO.java  Fibonacci.java  Graphs_lecture.java  HasPath.java  HeapSort.java  Heaps.java  InsertionSort.java  KadaneApp.java  MSHalf.java  MaxSumDFS.java  MergeSortApp.java  MergeSortIter.java  MyDate.java  QSIter.java  QuickSortApp.java  SelectionSort.java  ShortestPath.java  SortApp.java  SpecialStack.java  TopSort.java  TransClosure.java  Trees.java  WektorApp.java  checkBST.java  inversionMS.java  isCyclic.java  isMaxHeap.java  mergeKLists.java  minSpanTree.java  (+7 more)
design_patterns/Builder_10/: CMakeLists.txt
design_patterns/Builder_10/10a/: AdminButtonsBuilder.cpp  ButtonsBuilder.cpp  Form.cpp  FormBuilder.cpp  StudentsButtonsBuilder.cpp  StudentsWMBuilder.cpp  WelcomeMessageBuilder.cpp  main.cpp
design_patterns/Builder_10/10b/: Movie.cpp  Multimedia.cpp  Music.cpp  Picture.cpp  main.cpp
(+125 files in other folders)
